tests/NormalTests/paczka1/fuzzy1/73032258.err
Error in line 7: oUNs A148 19,}
Error in line 10: u7I9dHJH9 A148 96,8
Error in line 13: xSTc A148 55,2
Error in line 32: b0NVBj6PKk S274 64,5
Error in line 38: b0NVBj6PKk S793 33,8
